--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,6 @@
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
+
+@import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/space/space.css);
