feat: Добавить стили

--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -1,6 +1,6 @@
 .header__link {
   font-size: 18px;
   line-height: 22px;
-  color: var(--basic-white);
+  color: white;
   text-decoration: none;
 }
