--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -4,6 +4,8 @@
   border-radius: 10px;
   width: 430px;
   position: relative;
+  grid-column: 2;
+  grid-row: 2;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
 
