--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 @import url(./blocks/popup/_opened/popup_opened.css);
 
 @import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__info/header__info.css);
 @import url(./blocks/space/space.css);
 @import url(./blocks/center/center.css);
 @import url(./blocks/form/form.css);
@@ -28,3 +29,8 @@
 @import url(./blocks/form/__title/form__title.css);
 @import url(./blocks/form/__field/form__field.css);
 @import url(./blocks/form/__fields/form__fields.css);
+@import url(./blocks/info-tooltip/info-tooltip.css);
+@import url(./blocks/info-tooltip/__icon/info-tooltip__icon.css);
+@import url(./blocks/info-tooltip/__icon/_type/info-tooltip__icon_type_error.css);
+@import url(./blocks/info-tooltip/__icon/_type/info-tooltip__icon_type_success.css);
+@import url(./blocks/info-tooltip/__text/info-tooltip__text.css);
