--- a/src/blocks/popup/__img-gallery/popup__img-gallery.css
+++ b/src/blocks/popup/__img-gallery/popup__img-gallery.css
@@ -1,5 +1,7 @@
 .popup__img-gallery {
   max-width: 75vw;
   max-height: 75vh;
-  object-fit: contain;
+  object-fit: cover;
+  grid-column: 2;
+  grid-row: 2;
 }
