--- a/src/blocks/card/__capture/card__capture.css
+++ b/src/blocks/card/__capture/card__capture.css
@@ -1,14 +1,12 @@
 .card__capture {
-  margin: 0;
-  color: black;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
+  color: black;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 220px;
-  grid-column: 1;
-  grid-row: 1/2;
-  padding-top: 10px;
+  max-width: 210px;
 }
