--- a/src/blocks/card/__like-counter/card__like-counter.css
+++ b/src/blocks/card/__like-counter/card__like-counter.css
@@ -1,10 +1,8 @@
 .card__like-counter {
-    grid-column: 2;
-    grid-row: 2;
-    font-size: 13px;
-    line-height: 16px;
-    text-align: center;
-    color: black;
-    place-self: center;
-    padding-top: 19px;
+  color: black;
+  font-size: 13px;
+  line-height: 16px;
+  align-content: center;
+  display: flex;
+  justify-content: center;
 }
