--- a/src/blocks/cards/cards.css
+++ b/src/blocks/cards/cards.css
@@ -1,10 +1,11 @@
 .cards {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  margin: 51px auto 0 auto;
+  justify-content: center;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px 16px;
+  grid-template-rows: repeat(auto, 1fr);
+  grid-row-gap:20px;
+  grid-column-gap: 17px;
 }
 
 @media screen and (max-width: 910px) {
