--- a/src/blocks/form/__input/form__input.css
+++ b/src/blocks/form/__input/form__input.css
@@ -3,5 +3,13 @@
   line-height: 17px;
   padding: 4px 0 9px 0;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  border-bottom: 1px solid rgba(42, 44, 47, .2);
+  font-weight: 400;
+  color: black;
 }
+
+.form__input:focus{
+  outline: none;
+  background-color: transparent;
+}
+
