--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,6 +1,5 @@
 @import url(./__button/popup__button.css);
 @import url(./__title/popup__title.css);
-@import url(./__input/popup__input.css);
 @import url(./__close/popup__close.css);
 @import url(./__form/popup__form.css);
 @import url(./__container/popup__container.css);
@@ -10,23 +9,27 @@
 @import url(./__img-gallery/popup__img-gallery.css);
 
 @import url(./__button/_type/popup__button_type_disabled.css);
-@import url(./__input/_type/popup__input_type_error.css);
-
 @import url(./__error-message/popup__error-message.css);
 @import url(./__error-message/_type/popup__error-message_type_active.css);
 
 .popup {
   position: fixed;
-  display: flex;
+  display: grid;
   top: 0;
   right: 0;
-  left: 0;
-  bottom: 0;
-  background-color: rgb(0, 0, 0, 0.5);
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(42, 44, 47, 0.5);
   visibility: hidden;
   opacity: 0;
   transition: all 0.5s ease-in;
-  z-index: 2;
+  grid-template-columns: 1fr max-content 1fr;
+  grid-template-rows: 1fr max-content 1fr;
+  gap: 8px;
+}
+
+@media screen and (max-width: 650px)  {
+  .popup {
+    gap: 16px;
+  }
 }
