--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,10 +1,10 @@
 .profile__avatar {
-  height: 123px;
-  width: 123px;
+  box-sizing: border-box;
   border-radius: 50%;
-  margin: 39px 0 0 0;
+  height: 120px;
+  width: 120px;
+  overflow: hidden;
   object-fit: cover;
-
 }
 
 @media screen and (max-width: 910px) {
