--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,18 +1,27 @@
 .profile__edit-button {
+  display: flex;
   width: 24px;
   height: 24px;
   background-image: url("../../../images/edit-icon.svg");
-  box-sizing: border-box;
+  background-size: 10px;
   background-position: center;
   background-repeat: no-repeat;
   border: 1px solid white;
-  background-color: unset;
-  margin: 0 0 6px 18px;
+  background-color: transparent;
+  align-self: end;
+  margin-bottom: 9px;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.2s ease-out;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 880px) {
   .profile__edit-button {
     width: 18px;
     height: 18px;
+    background-size: 7.5px;
+    margin-bottom: 6px;
   }
 }
