--- a/src/blocks/profile/__img-wrapper/profile__img-wrapper.css
+++ b/src/blocks/profile/__img-wrapper/profile__img-wrapper.css
@@ -1,25 +1,21 @@
 .profile__img-wrapper {
-    position: relative;
-}
-.profile__img-wrapper:before {
-    display: none;
-    cursor: pointer;
-    content: "";
-    height: 123px;
-    width: 123px;
-    border-radius: 50%;
-    background-color: rgb(0, 0, 0, 0.5);
-    background-image: url('../../../images/edit-icon.svg');
-    padding: 15px;
-    box-sizing: border-box;
-    background-position: center;
-    background-size: 26px;
-    background-repeat: no-repeat;
-    z-index: 1;
-    position: absolute;
-    top: 39px;     
+  background-color: rgb(0, 0, 0, 0.5);
+  transition: opacity 0.2s ease-out;
+  box-sizing: border-box;
+  border-radius: 50%;
+  height: 120px;
+  width: 120px;
+  overflow: hidden;
+  background-image: url(../../../images/edit-icon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.profile__img-wrapper:hover:before {
-    display: flex;
+.profile__img-wrapper:hover {
+    display: block;
 }
