--- a/src/blocks/cards/cards.css
+++ b/src/blocks/cards/cards.css
@@ -11,7 +11,7 @@
 @media screen and (max-width: 910px) {
   .cards {
     grid-template-columns: repeat(2, 1fr);
-    margin: 0 auto;
+    margin: 62px auto;
     max-width: 580px;
   }
 }
