--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -6,8 +6,8 @@
   min-width: 300px;
 }
 
-@media screen and (max-width: 910px) {
+/*@media screen and (max-width: 910px) {
   .footer {
     margin: 51px 0 30px 0;
   }
-}
+}*/
